# utify

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  intro.md  modules.rst  rtd_requirements.txt
docs/_static/: custom.css
docs/tutorials/: logging.ipynb  logging.md
src/utify/: __init__.py  base.py  cache.py  cli.py  dataframe.py  dataset.py  fastprogress.py  logger.py  plotting.py
src/utilpy/: base.py  cli.py  fastprogress.py  logger.py  skeleton.py
tests/: conftest.py  test_skeleton.py  test_utify.py
