[tool.poetry]
name = "utify"
version = "0.1.10"
description = "Utility Functions for Python"
authors = ["yajiez <yajiez.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
ipython = "^7.10.2"
fire = "^0.2.1"
tqdm = "^4.40.2"
wasabi = "^0.4.2"
numpy = ">=1.16.1, <1.18.0"
pandas = "^0.25.3"
pyarrow = "^0.15.1"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
pillow = "^6.2.1"
sqlalchemy = "^1.3.12"
sphinx = {version = "^2.3.0", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}
nbsphinx = {version = "^0.5.0", optional = true}
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^2.3.0"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"
nbsphinx = "^0.5.0"
ipykernel = "^5.1.3"

[tool.poetry.extras]
doc = ["shpinx", "recommonmark", "sphinx_rtd_theme", "nbsphinx"]

[tool.poetry.scripts]
utify = "utify.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
